# swiss_skull

./: .gitignore  MainWindow.py  README.md  SkullStripper.py  build.spec  main.py  pyproject.toml  req.txt
convertation/: MainWindow.py  MeshConverter.py  conversion.py  dialogs.py  slider.py  styles.py  toolbar.py
convertation/logger/: logger.py
convertation/mesh_data/: model_metadata.py
convertation/ui/: dialogs.py  main_window_panel.py  slider.py  styles.py  toolbar.py
logger/: logger.py
python/: convertation.py  main.py
python/convertation/: MainWindow.py  conversion.py  convertation.py
python/segmentation/: MainWindow.py  SkullStripper.py
segmentation/: MainWindow.py  SettingsDialog.py  SkullStripper.py  style.py
segmentation/ui/: SettingsDialog.py
test/: 2.py  ttest1.py
