[project]
name = "swiss-skull"
version = "0.1.0"
description = "A Python desktop application for skull segmentation and analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs==26.1.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "cyclopts==4.10.2",
    "docstring-parser==0.17.0",
    "docutils==0.22.4",
    "fonttools==4.62.1",
    "idna==3.11",
    "ImageIO==2.37.3",
    "kiwisolver==1.5.0",
    "lazy-loader==0.5",
    "markdown-it-py==4.0.0",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "networkx==3.6.1",
    "numpy==2.4.4",
    "packaging==26.0",
    "pillow==12.1.1",
    "platformdirs==4.9.6",
    "pooch==1.9.0",
    "Pygments==2.20.0",
    "pyparsing==3.3.2",
    "pyqtgraph==0.14.0",
    "PySide6==6.11.0",
    "PySide6-addons==6.11.0",
    "PySide6-essentials==6.11.0",
    "python-dateutil==2.9.0.post0",
    "pyvista==0.47.2",
    "pyvistaqt==0.11.4",
    "QtPy==2.4.3",
    "requests==2.33.1",
    "rich==14.3.3",
    "rich-rst==1.3.2",
    "scikit-image==0.26.0",
    "scipy==1.17.1",
    "scooby==0.11.0",
    "shiboken6==6.11.0",
    "simpleITK==2.5.3",
    "six==1.17.0",
    "tifffile==2026.3.3",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "vtk==9.6.0",
]

[project.scripts]
swiss-skull = "python.main:main"
